--- a/semantics-komarhuntington/article.html
+++ b/semantics-komarhuntington/article.html
@@ -61,23 +61,28 @@
   </footer>
   </article>
   <aside class='sidebar'>
+    <section>
     <h2>Sidebar</h2>
       <p>Some sidebar content</p>
+    </section>
       <nav>
+        <section>
         <h3>HTML &amp; CSS Tutorial</h3>
         <ul>
           <li><a href='#'>Introduction</a></li>
           <li><a href='#'>Basic Web Pages</a></li>
           <li><a href='#'>etc...</a></li>
         </ul>
+        </section>
       </nav>
-    <nav>
-    <h3>JavaScript Tutorial</h3>
-      <ul>
-        <li><a href='#'>Introduction</a></li>
-        <li><a href='#'>Hello, JavaScript</a></li>
-        <li><a href='#'>etc...</a></li>
-      </ul>
+      <nav>
+      <section>
+      <h3>JavaScript Tutorial</h3>
+        <ul>
+          <li><a href='#'>Introduction</a></li>
+          <li><a href='#'>Hello, JavaScript</a></li>
+          <li><a href='#'>etc...</a></li>
+        </ul>
     </nav>
   </aside>
   <footer>
